# hyper-ford

./: .gitignore  HP.py  MO_energy_function.py  PostProcessor.py  PostProcessor_FDC.py  README.md  Run_MO_Optimisation.py  Run_Optimisation.py  Run_Simulation.py  global_parameters.json  globalpars_JSON.py  model_functions.py  opt_energy_functions.py  opt_operation_type.py  optimization_results.txt  parameters_check.py  pyproject.toml  sim_energy_functions.py  sim_operation_type.py  testparcompt.py
.github/workflows/: publish.yml
hyper_py/model/: model_functions.py
hyper_py/optimise/: MO_energy_function.py  PostProcessor.py  Run_Borg_MO_Optimisation.py  Run_MO_Optimisation.py  Run_Optimisation.py  opt_energy_functions.py
hyper_py/simulate/: Run_Simulation.py  sim_energy_functions.py
hyperford/optimise/: Run_Borg_MO_Optimisation.py  Run_Borg_main.py  Run_MO_Optimisation.py  Run_Optimisation.py  Run_SingleDE_main.py
input/: Besik_test.xlsx  EffCurves.xlsx  b_observed.txt  b_observed_long.txt
