[build-system]
requires = ["setuptools"]

[project]
name = "hyper-ford"
version = "0.0.1"  # Update this version number
description = "HYdroPowER Simulation and Optimization Toolbox"
authors = [{name = "Veysel Yildiz", email = "vyildiz1@sheffield.ac.uk"}]
license = {text = "MIT License"}
keywords = ["hydropower", "optimization", "simulation", "toolbox"]
requires-python = ">=3.9"
readme="README.md"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "platypus-opt",
    "pymoo"  
]

[tool.setuptools.packages]
find = { }
